--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^12.7.4",
     "@react-native-firebase/auth": "^12.7.4",
     "@react-native-firebase/database": "^12.7.4",
