--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@types/react-native-calendar-picker": "^7.0.2",
     "dayjs": "^1.10.7",
+    "i": "^0.3.7",
     "native-base": "^3.1.0",
+    "npm": "^7.24.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-calendar-picker": "^7.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
     "react-native-svg": "^12.1.1",
