--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "20.1.5948944"
+        supportLibVersion = "28.0.0"
+        playServicesVersion = "17.0.1" // or find latest version
+        androidMapsUtilsVersion = "2.2.6"
     }
     repositories {
         google()
@@ -15,6 +18,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.1")
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:1.3.0"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
