--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-calendar-picker": "^7.1.2",
+    "react-native-maps": "^0.29.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
     "react-native-svg": "^12.1.1",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.1",
     "styled-system": "^5.1.5"
   },
