--- a/android/build.gradle
+++ b/android/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         targetSdkVersion = 30
         ndkVersion = "20.1.5948944"
         supportLibVersion = "28.0.0"
-        playServicesVersion = "17.0.1" // or find latest version
+        playServicesVersion = "17.0.0" // or find latest version
         androidMapsUtilsVersion = "2.2.6"
     }
     repositories {
@@ -18,7 +18,7 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.1")
         classpath 'com.google.gms:google-services:4.3.10'
-        classpath "com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:1.3.0"
+        classpath("com.google.android.libraries.mapsplatform.secrets-gradle-plugin:secrets-gradle-plugin:2.0.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
