--- a/.github/workflows/PR_TestByJest.yml
+++ b/.github/workflows/PR_TestByJest.yml
@@ -3,7 +3,7 @@ name: PR Test
 on: 
 	pull_request:
 	branches:
-		- feature/*
+		- develop
 
 jobs:
   Run Jest:
@@ -13,14 +13,14 @@ jobs:
       node-version: [8.x, 10.x, 12.x, 14.x]
       
   steps:
-   - uses: actions/checkout@v2
-   - name: npm install
-     run: npm install
+  - uses: actions/checkout@v2
+  - name: npm install
+    run: npm install
             - name : if fail
-     uses: actions/github-script@0.2.0
-     with:
-         github-token: ${{github.token}}
-         script : |
+    uses: actions/github-script@0.2.0
+    with:
+        github-token: ${{github.token}}
+        script : |
           const ref = "${{github.ref}}"
           const pull_number = Number(ref.split("/")[2])
           await github.pulls.createReview({
@@ -34,4 +34,4 @@ jobs:
             pull_number,
             state: "closed"
           })
-     if: failure()
+    if: failure()
