--- a/.github/workflows/PR_TestByJest.yml
+++ b/.github/workflows/PR_TestByJest.yml
@@ -16,7 +16,9 @@ jobs:
   - uses: actions/checkout@v2
   - name: npm install
     run: npm install
-            - name : if fail
+  - name: run test code
+    run: npm test
+  - name : if fail
     uses: actions/github-script@0.2.0
     with:
         github-token: ${{github.token}}
