--- a/.github/workflows/jestAction.yml
+++ b/.github/workflows/jestAction.yml
@@ -5,10 +5,8 @@ name: Test_with_Jest
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ develop ]
   pull_request:
-    branches: [ develop ]
+    branches: [ main, develop ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
