--- a/.github/workflows/jestAction.yml
+++ b/.github/workflows/jestAction.yml
@@ -1,37 +1,36 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Test_with_Jest
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   pull_request:
-    branches: [ main, develop ]
+    branches: 
+      - devlop
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
 
-      # Runs a single command using the runners shell
       - name: npm_install
         run: npm install
+        
       - name: run_test_code
         run: npm test
+        
       - name : if_fail
-        uses: actions/github-script@0.2.0
+        uses: actions/github-script@4.0.2
         with:
-            github-token: ${{secrets.TOKEN}}
+            github-token: ${{ secrets.TOKEN }}
             script : |
               const ref = "${{github.ref}}"
               const pull_number = Number(ref.split("/")[2])
