--- a/.github/workflows/jestPRTest.yml
+++ b/.github/workflows/jestPRTest.yml
@@ -6,7 +6,7 @@ on:
       - devlop
 
   # Allows you to run this workflow manually from the Actions tab
-  # workflow_dispatch:
+  workflow_dispatch:
 
 
 jobs:
