--- a/.github/workflows/PRTest.yml
+++ b/.github/workflows/PRTest.yml
@@ -1,13 +1,6 @@
-name: Test_with_Jest
+name: PR_Test
 
-on:
-  pull_request:
-    branches: 
-      - devlop
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+on: [pull_request]
 
 jobs:
   build:
@@ -28,7 +21,7 @@ jobs:
         run: npm test
         
       - name : if_fail
-        uses: actions/github-script@v5
+        uses: actions/github-script@v4
         with:
             github-token: ${{ secrets.TOKEN }}
             script : |
