--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@types/react-native-calendar-picker": "^7.0.2",
+    "babel-jest": "^27.2.3",
     "dayjs": "^1.10.7",
     "i": "^0.3.7",
     "native-base": "^3.1.0",
     "npm": "^7.24.0",
     "react": "17.0.2",
     "react-native": "0.65.1",
-    "react-native-calendar-picker": "^7.1.2",
-    "react-native-maps": "^0.29.3",
+    "react-native-calendar-picker": "^6.1.5",
+    "react-native-maps": "^0.27.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.6.0",
     "react-native-svg": "^12.1.1",
@@ -37,18 +38,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.0.2",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
-    "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
-    "jest": "^26.6.3",
+    "jest": "^27.2.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-codegen": "^0.0.7",
     "react-test-renderer": "17.0.2",
-    "typescript": "^3.8.3"
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
   },
   "resolutions": {
     "@types/react": "^17"
@@ -62,6 +65,12 @@
       "jsx",
       "json",
       "node"
+    ],
+    "transform": {
+      "node_modules/variables/.+\\.(j|t)sx?$": "ts-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!variables/.*)"
     ]
   }
 }
